[package]
name = "furtherland-office"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Framework
yew = "0.17"
yewtil = "0.3"

# JavaScript ABI
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# web-sys

# Styling
css-in-rust = { version = "0.5", features = ["yew_integration"] }

# Networking
reqwest = "0.11"
url = "2.2"

# Error Handling
thiserror = "1.0"

# Synchronization
async-channel = "1.5"

# Utilities
regex = "1.4"
once_cell = "1.5"

# Logging
log = "0.4"
console_log = { version = "0.2", features = ["color"] }

# Manifest
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Navigator",
  "Performance",
  "CssStyleDeclaration",
  "HtmlElement",
  "EventTarget",
  "DomTokenList",
  "ValidityState",
  "MouseEvent",
  "KeyboardEvent"
]
